# backend/docs/swagger.json
@@ -1808,7 +1808,7 @@
                 }
             }
         },
-        "dto.AccountGainResponse": {
+        "dto.AccountGainDetailResponse": {
             "type": "object",
             "properties": {
                 "account": {
@@ -1820,7 +1820,6 @@
                         "$ref": "#/definitions/dto.NetworthTimelineItemResponse"
                     }
                 },
-                "portfolioGroups": {},
                 "postings": {
                     "type": "array",
                     "items": {
@@ -1829,6 +1828,20 @@
                 },
                 "xirr": {
                     "type": "number"
+                }
+            }
+        },
+        "dto.AccountGainResponse": {
+            "type": "object",
+            "properties": {
+                "asset_breakdown": {
+                    "$ref": "#/definitions/dto.AssetBreakdownResponse"
+                },
+                "gain_timeline_breakdown": {
+                    "$ref": "#/definitions/dto.AccountGainDetailResponse"
+                },
+                "portfolio_allocation": {
+                    "$ref": "#/definitions/dto.PortfolioAllocationGroupsResponse"
                 }
             }
         },
@@ -1935,13 +1948,24 @@
                 }
             }
         },
+        "dto.AutoCompleteItemResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "label": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.AutoCompleteResponse": {
             "type": "object",
             "properties": {
-                "value": {
+                "completions": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/dto.AutoCompleteItemResponse"
                     }
                 }
             }
@@ -2202,10 +2226,13 @@
             "type": "object",
             "properties": {
                 "budget": {
-                    "$ref": "#/definitions/dto.BudgetResponse"
+                    "$ref": "#/definitions/dto.BudgetsSummaryResponse"
                 },
                 "cashFlows": {
-                    "$ref": "#/definitions/dto.CashFlowResponse"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.CashFlowResponse"
+                    }
                 },
                 "checkingBalances": {},
                 "expenses": {
@@ -2791,6 +2818,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "operation": {
                     "type": "string"
                 },
                 "version": {
