# backend/pkg/api/dto/dashboard.go
@@ -4,9 +4,9 @@ type DashboardResponse struct {
 	CheckingBalances     interface{}                     `json:"checkingBalances"`
 	Networth             CurrentNetworthResponse         `json:"networth"`
 	Expenses             PeriodicPostingsSummaryResponse `json:"expenses"`
-	CashFlows            CashFlowResponse                `json:"cashFlows"`
+	CashFlows            []CashFlowResponse              `json:"cashFlows"`
 	TransactionSequences []TransactionSequenceResponse   `json:"transactionSequences"`
 	Transactions         []TransactionResponse           `json:"transactions"`
-	Budget               BudgetResponse                  `json:"budget"`
+	Budget               BudgetsSummaryResponse          `json:"budget"`
 	GoalSummaries        []GoalSummaryResponse           `json:"goalSummaries"`
 }
